[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus-std = { path="../../", features = ["utils"] }
dioxus = "0.4"
dioxus-web = "0.4"

log = "0.4.6"

# WebAssembly Debug
cacao = "0.3.2"
dioxus-desktop = "0.4.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
gloo-storage = "0.3.0"
